<resources>
    <string name="app_name">TecToy Automação Kotlin</string>

    <!--funtion list-->
    <string name="function_all">Teste Completo</string>
    <string name="function_qrcode">QR Code</string>
    <string name="function_barcode">Bar Code</string>
    <string name="function_text">Texto</string>
    <string name="function_tab">Formulário</string>
    <string name="function_pic">Imagem</string>
    <string name="function_multi">Multi Threading</string>
    <string name="function_threeline">Avanço Papel</string>
    <string name="function_buffer">Impressão continua</string>
    <string name="function_blackline">Tarja preta</string>
    <string name="function_cash">Gaveta</string>
    <string name="function_lcd">Lcd</string>
    <string name="function_status">Status</string>
    <string name="function_label">Teste de Etiqueta</string>
    <string name="function_cortar">Cortar</string>
    <string name="function_scanner">Scanner</string>
    <string name="function_led">Led</string>
    <string name="function_paygo">Paygo</string>
    <string name="function_nfc">NFC</string>
    <string name="function_scanner_device">Scanner Device</string>
    <string name="message_write_error">Erro</string>
    <string name="message_write_success">Sucesso</string>
    <string name="message_write_progress">Progresso</string>

    <!--titles-->
    <string name="setting_title">Configuração</string>
    <string name="info_title">Informação da impressora</string>
    <string name="qr_title">QrCode</string>
    <string name="barcode_title">BarCode</string>
    <string name="text_title">Impressão de texto</string>
    <string name="bitmap_title">Imagem</string>
    <string name="tab_title">Formulário</string>
    <string name="all_title">Teste Completo</string>
    <string name="buffer_title">Transaction</string>
    <string name="blackline_title">Black Label</string>
    <string name="lcd_title">Lcd Teste</string>
    <string name="label_title">Label Teste</string>

    <!--text-->
    <string name="printer_serial_num">Número de série</string>
    <string name="printer_model">Modelo da impressora</string>
    <string name="printer_head">Cabeça de impressão</string>
    <string name="printer_firmware">Impressora firmware version</string>
    <string name="printer_head_size">Tamanho impressão</string>
    <string name="printer_distance">Distância impressão</string>
    <string name="printer_version">Versão de serviço</string>
    <string name="printer_dev_version">Versão de desenvolvimento</string>
    <string name="enter_work">Iniciar a transação</string>
    <string name="exit_work">Parar da transação</string>
    <string name="start_work">Start Transaction</string>
    <string name="start_work_low">Comece a imprimir</string>
    <string name="over_work">Fim da impressão</string>
    <string name="error_work">Exceção Ocorrida</string>
    <string name="print_baidu_ticket">Imprimir Ticket</string>
    <string name="print_meituan_ticket">Imprimir Ticket 2</string>
    <string name="print_eleme_ticket">Imprimir bilhete</string>
    <string name="print_koubei_ticket">Imprimir Ticket 3</string>
    <string name="print_interval_black">Imprimir intervalo em preto </string>
    <string name="print_black">Imprimir preto</string>
    <string name="print">Imprimir</string>
    <string name="printing">Impressão~~~</string>
    <string name="input_barcode">Insira o conteúdo do código de barras</string>
    <string name="content_barcode">BarCode</string>
    <string name="encode_barcode">Modelos de BarCode</string>
    <string name="no_print">Informe um texto</string>
    <string name="barcode_up">Acima do código de barras barcode</string>
    <string name="barcode_down">Abaixo do código de barras</string>
    <string name="barcode_updown">Acima e Abaixo do código de barras</string>
    <string name="barcode_codigo">201705070507</string>
    <string name="text_position">HRI posição</string>
    <string name="barcode_height">Altura</string>
    <string name="barcode_width">Largura</string>
    <string name="content_qrcode">QrCode</string>
    <string name="input_qrcode">Informe o conteúdo do QrCode</string>
    <string name="array_qrcode">Qtd. Impressão</string>
    <string name="size_qrcode">QR-Code tamanho</string>
    <string name="error_qrcode">Nível de correção</string>
    <string name="upload_info">Carregar informações da impressora</string>
    <string name="characterset">char set</string>
    <string name="connect_method">Método de conexão</string>
    <string name="size_paper">paper size</string>
    <string name="size_text">Tamanho texto</string>
    <string name="type_text">text typeface</string>
    <string name="bold_text">bold</string>
    <string name="underline_text">underline</string>
    <string name="print_density">Densidade da impressora</string>
    <string name="add_line">Adicionar</string>
    <string name="content_form">Conteúdo</string>
    <string name="weight_form">weight%</string>
    <string name="cut_paper">Cortar Papel</string>
    <string name="cut_paper_sim">Sim</string>
    <string name="cut_paper_nao">Não</string>
    <string name="align_form">Alinhamento</string>
    <string name="align_left">Esquerda</string>
    <string name="align_mid">Centro</string>
    <string name="align_right">Direita</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="about">Sobre</string>
    <string name="single">QrCode</string>
    <string name="twice">Dois QrCode</string>
    <string name="connect_service">Conectar</string>
    <string name="disconnect_service">Desconectar</string>
    <string name="multithread">multithread</string>
    <string name="multithread_stop">Parar</string>
    <string name="pic_pos">Modo impressão imagem</string>
    <string name="pic_hor">Paisagem</string>
    <string name="pic_ver">Retrato</string>
    <string name="pic_mode">Método de impressão</string>
    <string name="pic_mode1">Bitmap</string>
    <string name="pic_mode2">8 ponto de densidade simples</string>
    <string name="pic_mode3">8 ponto de densidade dupla</string>
    <string name="pic_mode4">24 ponto de densidade simples</string>
    <string name="pic_mode5">24 ponto de densidade dupla</string>
    <string name="style_width">Largura</string>
    <string name="style_height">Altura</string>
    <string name="buffer_info1">Impressão de evento: controla a impressão de cada pedido para o status de impressão \nNo processo de impressão de uma única transação, se houver uma anormalidade de falta de papel, depois que o estado do papel for restaurado, você pode escolher reimprimir um único.</string>
    <string name="buffer_info2">Etapa 1: iniciar o modelo de impressão de evento \nEtapa2: adicionar um evento \nPasso 3: sair do modelo de impressão de evento</string>
    <string name="bl_info1">Requisitos de cor: refletividade não excede 6%, comprimento de onda infravermelho intervalo 700-1000nm.</string>
    <string name="bl_info2">Requisitos de posição: a etiqueta preta precisa estar no meio do sensor de nível de papel pode ser detectada.</string>
    <string name="bl_info3">Detecção de etiqueta preta: A impressora alimentará o papel (até 600 mm) para detectar a etiqueta preta</string>
    <string name="bl_set">Configuração de etiqueta preta</string>
    <string name="bl_check">Verificação de etiqueta preta</string>
    <string name="bl_sample">Amostra de etiqueta preta</string>
    <string name="display_text">Exibir uma linha</string>
    <string name="display_texts">Linhas de exibição</string>
    <string name="display_pic">Exibir imagem</string>
    <string name="label_print_one">Imprimir uma etiqueta</string>
    <string name="label_print_more">Imprimir Multi-etiqueta</string>
    <string name="label_info">A função de impressão de etiquetas Sunmi agora oferece suporte apenas para dispositivos portáteis V2 e v2pro dispositivos. Consulte o fornecedor antes de usar</string>
    <string name="label_info2">Uso: diferente da instrução de rótulo padrão, rótulo Sunmi a impressão precisa adaptar o conteúdo de impressão e localizar a posição de impressão da etiqueta por meio da interface de posicionamento</string>


    <!--instruction-->
    <string name="toast_1">Impressão de transação, use o modo AIDL!</string>
    <string name="toast_2">O serviço foi desconectado!</string>
    <string name="toast_3">Bluetooth dispositivo está indisponível</string>
    <string name="toast_4">Bluetooth dispositivo não detectado. Por favor conecte o Bluetooth!</string>
    <string name="toast_5">Não encontrado InnterPrinter!</string>
    <string name="toast_6">Bluetooth conexão falhou!</string>
    <string name="toast_7">Apenas um único código Qr é impresso para o modo AIDL</string>
    <string name="toast_8">Agora o tamanho do QrCode deve ser menor que 7!</string>
    <string name="toast_9">BarCode erro de tipo ou conteúdo!</string>
    <string name="toast_10">Defina a impressora como modo de etiqueta preta!</string>
    <string name="toast_11">Configurações-> Sistema-> Avançado-> InnerPrinter-> definir marca preta função</string>
    <string name="toast_12">Por favor, configure a impressora para o modo de etiqueta!</string>

    <!--about content-->
    <string name="about_content">Exemplo de integração TecToy Sunmi. \nExemplo integre dois tipos de conexão: AIDL e BLUETOOTH. Ele também fornece uma série de módulos de teste de impressão, que ajudam o desenvolvedor a se conectar com a função de impressão sunmi mais rapidamente. \n carregue as informações que precisam ser impressas, o que permite que a sunmi localize melhor os problemas. \n site oficial: http://www.tectoysunmi.com. \n documentação do desenvolvedor: http://docs.sunmi.com</string>

    <!--function explain-->
    <string name="text_instruction">Especificação: O tipo de letra de sunmi é uma fonte monospaced . Espere suportar a estrutura da fonte definida pelo conjunto de instruções normal, ele também pode usar o intercâmbio de interface AIDL para definir diretamente o tamanho da fonte. No entanto, o demo de teste só poderia usar o intercâmbio de interface AIDL para fazer isso. Os desenvolvedores podem pesquisar o conjunto de instruções Epson relativo e definir a fonte por conta própria. \ n aviso: a configuração do conjunto de caracteres tem influência apenas na impressão do pedido, não afetando os caracteres de impressão AIDL. A impressão do conjunto de caracteres de byte único deve definir o modo de byte único primeiro. Porém, o padrão dos serviços sunmi é o modo de byte duplo.</string>
    <!--print content-->
    <string name="text_print">欢迎光临(Simplified Chinese)\n歡迎光臨（traditional chinese）\nWelcome(English)\n어서 오세요.(Korean)\nいらっしゃいませ(Japanese)\nWillkommen in der(Germany)\nSouhaits de bienvenue(France)\nยินดีต้อนรับสู่(Thai)\nДобро пожаловать(Russian)\nBenvenuti a(Italian)\nvítejte v(Czech)\nBEM - vindo Ao Brasil(Portutuese)\nمرحبا بكم في(Arabic)\n</string>
    <!--table explain-->
    <string name="table_instruction">Especificações: A mesa de impressão Bluetooth pode fornecer apenas exemplos e teste de impressão. Métodos específicos podem se referir ao conjunto de instruções da Epson.  </string>
</resources>