<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textAlignment="center"
    android:background="@color/background"
    android:padding="5dp"
    tools:context="br.com.tectoy.tectoyautomacao.activity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/worktext"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="56px"
                    android:layout_marginBottom="56px"
                    android:background="@color/background"
                    android:drawableTop="@drawable/function_all"
                    android:drawablePadding="12px"
                    android:gravity="center_horizontal"
                    android:maxLines="1"
                    android:text="@string/function_all"
                    android:textColor="@color/white"
                    android:textSize="24px" />

                <Button
                    android:id="@+id/wordqr"
                    android:layout_width="184dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="56px"
                    android:layout_marginBottom="56px"
                    android:background="@color/background"
                    android:drawableTop="@drawable/function_qr"
                    android:drawablePadding="12px"
                    android:gravity="center_horizontal"
                    android:maxLines="1"

                    android:text="@string/function_qrcode"
                    android:textColor="@color/white"
                    android:textSize="24px" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/wordbarcode"
                    android:layout_width="188dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="56px"
                    android:layout_marginBottom="56px"
                    android:drawableTop="@drawable/function_barcode"
                    android:drawablePadding="12px"
                    android:background="@color/background"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/function_barcode"
                    android:textColor="@color/white"
                    android:textSize="24px" />


                <Button
                    android:id="@+id/wordtext"
                    android:layout_width="188dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="56px"
                    android:layout_marginBottom="56px"
                    android:drawableTop="@drawable/function_text"
                    android:drawablePadding="12px"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/function_text"
                    android:background="@color/background"
                    android:textColor="@color/white"
                    android:textSize="24px" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/wordtable"
                    android:layout_width="188dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="56px"
                    android:layout_marginBottom="56px"
                    android:drawableTop="@drawable/function_tab"
                    android:drawablePadding="12px"
                    android:background="@color/background"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/function_tab"
                    android:textColor="@color/white"
                    android:textSize="24px" />
                <Button
                    android:id="@+id/wordimage"
                    android:layout_width="189dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="56px"
                    android:layout_marginBottom="56px"
                    android:drawableTop="@drawable/function_pic"
                    android:background="@color/background"
                    android:drawablePadding="12px"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/function_pic"
                    android:textColor="@color/white"
                    android:textSize="24px" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/wordthreeline"
                    android:layout_width="188dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="56px"
                    android:layout_marginBottom="56px"
                    android:drawableTop="@drawable/function_threeline"
                    android:drawablePadding="12px"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/function_threeline"
                    android:background="@color/background"
                    android:textColor="@color/white"
                    android:textSize="24px" />
                <Button
                    android:id="@+id/wordcash"
                    android:layout_width="188dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="56px"
                    android:layout_marginBottom="56px"
                    android:drawableTop="@drawable/function_cash"
                    android:drawablePadding="12px"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/function_cash"
                    android:background="@color/background"
                    android:textColor="@color/white"
                    android:textSize="24px" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <Button
                android:id="@+id/wordlcd"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="56px"
                android:layout_marginBottom="56px"
                android:drawableTop="@drawable/function_lcd"
                android:drawablePadding="12px"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/function_lcd"
                android:background="@color/background"
                android:textColor="@color/white"
                android:textSize="24px" />

                <Button
                    android:id="@+id/wordstatus"
                    android:layout_width="188dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="56px"
                    android:layout_marginBottom="56px"
                    android:drawableTop="@drawable/function_status"
                    android:drawablePadding="12px"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/function_status"
                    android:background="@color/background"
                    android:textColor="@color/white"
                    android:textSize="24px" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/wordtarja"
                    android:layout_width="188dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="56px"
                    android:layout_marginBottom="56px"
                    android:drawableTop="@drawable/function_blackline"
                    android:drawablePadding="12px"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/function_blackline"
                    android:background="@color/background"
                    android:textColor="@color/white"
                    android:textSize="24px" />

                <Button
                    android:id="@+id/wordlabel"
                    android:layout_width="188dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="56px"
                    android:layout_marginBottom="56px"
                    android:drawableTop="@drawable/function_label"
                    android:drawablePadding="12px"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/function_label"
                    android:background="@color/background"
                    android:textColor="@color/white"
                    android:textSize="24px" />

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/wordcorta"
                    android:layout_width="188dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="56px"
                    android:layout_marginBottom="56px"
                    android:drawableTop="@drawable/function_cortar"
                    android:drawablePadding="12px"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/function_cortar"
                    android:background="@color/background"
                    android:textColor="@color/white"
                    android:textSize="24px" />

                <Button
                    android:id="@+id/wordscanner"
                    android:layout_width="188dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="56px"
                    android:layout_marginBottom="56px"
                    android:drawableTop="@drawable/function_scanner"
                    android:drawablePadding="12px"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/function_scanner"
                    android:background="@color/background"
                    android:textColor="@color/white"
                    android:textSize="24px" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/wordled"
                    android:layout_width="188dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="56px"
                    android:layout_marginBottom="56px"
                    android:drawableTop="@drawable/function_led"
                    android:drawablePadding="12px"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/function_led"
                    android:background="@color/background"
                    android:textColor="@color/white"
                    android:textSize="24px" />

                <Button
                    android:id="@+id/wordpaygo"
                    android:layout_width="188dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="56px"
                    android:layout_marginBottom="56px"
                    android:drawableTop="@drawable/function_payment"
                    android:drawablePadding="12px"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/function_paygo"
                    android:background="@color/background"
                    android:textColor="@color/white"
                    android:textSize="24px" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/wordteste"
                    android:layout_width="188dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="56px"
                    android:layout_marginBottom="56px"
                    android:drawableTop="@drawable/function_scanner"
                    android:drawablePadding="12px"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/function_label"
                    android:background="@color/background"
                    android:textColor="@color/white"
                    android:textSize="24px" />

                <Button
                    android:id="@+id/wordnfc"
                    android:layout_width="188dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="56px"
                    android:layout_marginBottom="56px"
                    android:drawableTop="@drawable/function_nfc"
                    android:drawablePadding="12px"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/function_nfc"
                    android:background="@color/background"
                    android:textColor="@color/white"
                    android:textSize="24px" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</GridLayout>